update icons and labels

--- a/static/css/sass/module/component.scss
+++ b/static/css/sass/module/component.scss
@@ -167,6 +167,13 @@ section{
         margin-left:0;
     }
 }
+@media all and (max-width:$screen-l){
+    .card{
+        &:first-child, &:nth-child(6){
+            margin-left:$margin-m;
+        }
+    }
+}
 .card-header{
     background:grey;
     width:100%;
@@ -240,4 +247,14 @@ $c-object:$c-4;
     padding:$margin!important;
     display:inline-block;
     @include border-radius(8px);
+}
+.tag{
+    display:inline-block;
+    line-height:20px;
+    height:20px;
+    background:$c-9;
+    color:$c-9 - 40;
+    padding:0 10px;
+    margin:2px;
+    border-radius:10px;
 }
