--- a/static/css/sass/module/footer.scss
+++ b/static/css/sass/module/footer.scss
@@ -17,7 +17,7 @@
 		&:before{
 			font-family:$font-icon;
 			display:inline-block;
-			content: "\e037";
+			content: "\E05F";
 			//border:solid 1px red;
 			margin-right:$margin;
 		}
@@ -40,7 +40,7 @@
 			&:after{
 				font-family:$font-icon;
 				display:inline-block;
-				content: "\e056";
+				content: "\E060";
 				//border:solid 1px red;
 				margin-left:$margin;
 			}
