--- a/static/css/sass/module/palette.scss
+++ b/static/css/sass/module/palette.scss
@@ -14,6 +14,21 @@
 .blue-5{
   background:$c-1 - 40;
 }
+.blue-median-1{
+  background:$c-11;
+}
+.blue-median-2{
+  background:$c-11 + 20;
+}
+.blue-median-3{
+  background:$c-11 + 40;
+}
+.blue-median-4{
+  background:$c-11 - 20;
+}
+.blue-median-5{
+  background:$c-11 - 40;
+}
 .blue-firm-1{
   background:$c-2;
 }
