--- a/landing-page/css/scss/module/content.scss
+++ b/landing-page/css/scss/module/content.scss
@@ -167,13 +167,53 @@ section{
     75% {@include transform-scale(1.0)}
     to {@include transform-scale(1.2)}
 }
+
 .img-showcase{
 	position:absolute;
 	z-index: 1;
-    right: 120px;
+    right: 3rem;
     top:0;
-    width:70%;
+    width:72%;
     //outline: solid 1px red;
+}
+.showcase-wrapper{
+	//position: absolute;
+}
+.ic{
+	position: absolute;
+	top:0;
+	right:0;
+	left:0;
+	bottom: 0;
+	margin: auto;
+	z-index:4;
+	max-width:190px;
+	animation: move-circle 5s infinite linear;
+	&.ic-1{
+		left:20rem;
+		bottom:-40rem;
+		animation-delay: .2s;
+	}
+	&.ic-2{
+		left:30rem;
+		bottom:-20rem;
+		animation-delay: .1s;
+	}
+	&.ic-3{
+		left:55rem;
+		bottom:-30rem;
+		animation-delay: .35s;
+	}
+	&.ic-4{
+		left:60rem;
+		bottom:-5rem;
+		animation-delay: .25s;
+	}
+	&.ic-5{
+		left:90rem;
+		bottom:-5rem;
+		animation-delay: .15s;
+	}
 }
 .container-offset{
 	position: absolute;
