--- a/landing-page/css/style.css
+++ b/landing-page/css/style.css
@@ -893,7 +893,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 90000;
+  z-index: 8999;
   background: rgba(255, 255, 255, 0);
   transition: cubic-bezier(0.11, 0.65, 0.73, 0.66), 0.2s;
 }
@@ -1633,6 +1633,62 @@ section {
     float: left;
   }
 }
+/*Modal*/
+body.disabled {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.overlay {
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  z-index: 9998;
+  top: 0;
+  left: 0;
+  visibility: hidden;
+}
+
+.overlay.is-active {
+  visibility: visible;
+}
+
+.modal {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 9999;
+  overflow: auto;
+  visibility: hidden;
+}
+
+.modal.is-active {
+  visibility: visible;
+}
+
+.modal-container {
+  padding: 40px;
+}
+
+.modal-box {
+  width: 560px;
+  min-height: 300px;
+  background: white;
+  padding: 20px;
+  margin: auto;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+}
+
+.modal-box-toggle-height {
+  height: 1300px;
+}
+
 .text-xl {
   font-size: 3em;
 }
