--- a/landing-page/css/scss/composer/style.scss
+++ b/landing-page/css/scss/composer/style.scss
@@ -4,6 +4,7 @@
 @import "../module/header.scss";
 @import "../module/content.scss";
 @import "../module/_section-hero.scss";
+@import "../module/_section-pricing.scss";
 @import "../module/section-testimony.scss";
 @import "../module/icons-animated.scss";
 @import "../module/footer.scss";
