--- a/landing-page/css/scss/module/_section-pricing.scss
+++ b/landing-page/css/scss/module/_section-pricing.scss
@@ -1,24 +1,45 @@
 /*Section Pricing*/
+.outline{
+	outline:solid 1px red;
+}
+.bg-pricing{
+	width:80%;
+	position:fixed;
+	z-index: 0;
+	top:20vh;
+	right:0;
+	left:0;
+	margin:auto;
+}
+.bg-circles{
+	background-image:url('../img/img-circles.svg');
+    background-repeat:no-repeat;
+    background-position:top 10vh center;
+    //background-attachment: fixed;
+    //background-size:50%;
+}
+.section-pricing-hero{
+	padding:$margin*4 $margin $margin*3 $margin;
+}
+.section-pricing-cards{
 
-.section-pricing{
-	background-image: url("../img/img-backgroundcity.svg");
-	background-repeat:no-repeat;
-	background-size:cover;
-	background-color: #FFFFFF;
-	background-position:0 35vh;
-	background-attachment:fixed;
-	//opacity: 0.4;
-	width:100%;
-	height: 100vh;
 }
 
-@media all and ($max-width:$mobile-view){
-
-
+@media (min-height:$screen-sm) and (min-width:$mobile-view) {
+    .section-pricing-hero{
+		height: 80vh;
+	}
+	.section-pricing-cards{
+		.container{
+			margin-top:-20vh;
+		}
+	}
 }
+
+
 
 .section-plan{
-	background-color: #FFFFFF;
+	background-color:rgba(white, .5);
 	background-position: center;
 	margin-top: 50%;
 	position: relative;
@@ -27,39 +48,78 @@
 
 
 .main-title{
-	margin-top: 35vh;
-	position: relative;
-	left: 0;
-	top: 50%;
+	//margin-top: 35vh;
+	color:$c-1;
 	width: 100%;
 	text-align: center;
-	font-size: 50px;
-	font-weight: 600px;
+	font-size:(48/16)+em;
+	letter-spacing: .01rem;
+	font-weight:500;
+	margin:0.5rem 0 1rem 0;
+	padding:0;
 
 }
-
-h4{
-	font-size: 30px;
-	font-color: #797979;
-
+.sub-title{
+	margin:0.5rem 0 1rem 0;
+	padding:0;
+	font-weight: 400;
+	color:$c-font;
+	letter-spacing: .01rem;
 }
-
-.outline{
-	//outline:solid 0.5px red;
+.price-card-wrapper{
+	.col-md-3{
+		padding:$margin-m;
+		 display: -webkit-box;
+	  display: -moz-box;
+	  display: -ms-flexbox;
+	  display: -webkit-flex;
+	  display: flex;
+	}
 }
-
 .price-card{
-	padding: 10px;
-	width: 245px;
-	height: 420px;
-	margin-top: 10vh;
+	padding:$margin;
+	position: relative;
+	z-index:3;
+	width:100%;
 	background-color: white;
+	background-color:rgba(white, .8);
 	overflow: visible;
+	@include border-radius(4px);
+	@include box-shadow(0 0 0 2px rgba(black, .05));
+	&:before{
+		display: block;
+		content:'';
+		//background: red;
+		width:100%;
+		height:100%;
+		@include box-shadow(0 0 0 8px rgba($c-2, .2));
+		position: absolute;
+		z-index: -1;
+		top:0;
+		left:0;
+		opacity: 0;
+		@include transition(opacity .15s $cubic-bezier);
+		@include border-radius(4px);
+	}
+	&:hover{
+		&:before{
+			opacity: 1;
+		}
+	}
 }
+.price-card-img{
+	height:100px;
+	position: relative;
+	img{
+		max-width:100%;
+		position: absolute;
+		bottom:0;
+		left:0;
+		right:0;
+		margin:auto;
+	}
 
-.btn{
 }
-
 .free-trial-outline{
 	position: bottom;
 	text-align: center;
@@ -69,9 +129,6 @@ h4{
 	position: bottom;
 	text-align: left;
 	padding: 10px;
-	margin-top: 24vh;
-	margin-left: 5px;
-	margin-right: 5px;
 	line-height: 2; 
 }
 
