--- a/landing-page/css/scss/module/content.scss
+++ b/landing-page/css/scss/module/content.scss
@@ -49,7 +49,7 @@ section{
 	position: relative;
 	z-index: 1;
 }
-.u-bg{
+.bg-u{
 	width:80%;
 	position:fixed;
 	z-index: 0;
@@ -290,6 +290,36 @@ section{
 		}
 		&:active{
 			background:darken($c-6, 0%);
+		}
+	}
+	&.btn-7{
+		color:white;
+		background:$c-7;
+		&:hover{
+			background:lighten($c-7, 5%);
+		}
+		&:active{
+			background:darken($c-7, 0%);
+		}
+	}
+	&.btn-8{
+		color:white;
+		background:$c-8;
+		&:hover{
+			background:lighten($c-8, 5%);
+		}
+		&:active{
+			background:darken($c-8, 0%);
+		}
+	}
+	&.btn-trial{
+		color:white;
+		background:#FF5252;
+		&:hover{
+			background:lighten(#FF5252, 5%);
+		}
+		&:active{
+			background:darken(#FF5252, 0%);
 		}
 	}
 }
