--- a/landing-page/css/style.css
+++ b/landing-page/css/style.css
@@ -2289,6 +2289,54 @@ body.disabled {
   .leading-lines:nth-child(3):after, .leading-lines:nth-child(4):after {
     left: -50%;
   }
+
+  .feature-list {
+    position: relative;
+  }
+  .feature-list:before {
+    min-width: 100%;
+    width: calc(100% + 40px);
+    height: 100%;
+    content: "";
+    display: block;
+    position: absolute;
+    background: #f5f5f5;
+    background: rgba(23, 49, 85, 0.05);
+    left: -20px;
+    top: 0;
+    opacity: 0;
+    z-index: 0;
+    -webkit-transition: cubic-bezier(0.3, 1.01, 0.67, 0.36), 0.2s;
+    -moz-transition: cubic-bezier(0.3, 1.01, 0.67, 0.36), 0.2s;
+    -o-transition: cubic-bezier(0.3, 1.01, 0.67, 0.36), 0.2s;
+    transition: cubic-bezier(0.3, 1.01, 0.67, 0.36), 0.2s;
+    -webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
+    -webkit-transform: translate3d(0, 0, 0);
+    -moz-transform: translate3d(0, 0, 0);
+    -webkit-border-radius: 40px;
+    -moz-border-radius: 40px;
+    border-radius: 40px;
+  }
+  .feature-list:hover:before {
+    opacity: 1;
+  }
+
+  .sticky {
+    position: fixed;
+    top: 80px;
+    width: 473.3px;
+    z-index: 88;
+    -webkit-box-shadow: 0 5px 20px rgba(0, 0, 0, 0.25);
+    -moz-box-shadow: 0 5px 20px rgba(0, 0, 0, 0.25);
+    -o-box-shadow: 0 5px 20px rgba(0, 0, 0, 0.25);
+    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.25);
+    -webkit-transform: translateX(662px);
+    -moz-transform: translateX(662px);
+    -ms-transform: translateX(662px);
+    -o-transform: translateX(662px);
+    transform: translateX(662px);
+  }
 }
 .list-plans {
   list-style-type: none;
@@ -2318,8 +2366,43 @@ body.disabled {
   background-position: center center;
 }
 
-.border-b {
+.feature-list-header {
+  border-bottom: solid 2px #173155;
+}
+.feature-list-header .feature-plans {
+  background: #2791D9;
+  color: #ffffff;
+  padding: 20px 0;
+  text-align: center;
+  background: -moz-linear-gradient(left, #2791D9 0%, #2d5fa5 100%);
+  background: -webkit-linear-gradient(left, #2791D9 0%, #2d5fa5 100%);
+  background: linear-gradient(to right, #2791D9 0%, #2d5fa5 100%);
+  -webkit-border-top-left-radius: 4px;
+  -webkit-border-top-right-radius: 4px;
+  -moz-border-radius-topleft: 4px;
+  -moz-border-radius-topright: 4px;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+}
+
+.feature-list {
+  position: relative;
   border-bottom: solid 1px #ddd;
+  border-bottom: solid 1px rgba(23, 49, 85, 0.234);
+  font-size: 0.925rem;
+}
+
+.feature-info [class*=col-]:nth-child(1) {
+  background: #f7fbfe;
+}
+.feature-info [class*=col-]:nth-child(2) {
+  background: #eaf4fb;
+}
+.feature-info [class*=col-]:nth-child(3) {
+  background: #ddeef9;
+}
+.feature-info [class*=col-]:nth-child(4) {
+  background: #d0e7f7;
 }
 
 .section-feature-comparison {
@@ -2327,10 +2410,11 @@ body.disabled {
   min-height: 60vh;
   background: #ffffff;
   padding: 60px 0;
+  position: relative;
 }
 
 .ic-available, .ic-not-available {
-  display: block;
+  display: inline-block;
   background-repeat: no-repeat;
   background-position: center center;
   width: 22px;
