pre finale pricing page

--- a/landing-page/css/scss/module/_section-pricing.scss
+++ b/landing-page/css/scss/module/_section-pricing.scss
@@ -227,19 +227,20 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', e
 	position:relative;
 	&:before{
 		min-width: 100%;
-		width:calc(100% + 40px);
+		width:calc(100% + 20px);
 		height:100%;
 		content:'';
 		display:block;
 		position: absolute;
 		background:$c-10;
 		background:rgba($c-1, .05);
-		left:-20px;
+		left:-10px;
 		top:0;
 		opacity:0;
 		z-index:0;
 		@include transition-cubic-bezier();
-		@include border-radius(40px);
+		@include border-radius(8px);
+		box-shadow:0 0 0 3px rgba($c-1, .05);
 	}
 	&:hover{
 		&:before{
@@ -254,6 +255,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', e
 	  z-index: 88;
 	  @include box-shadow(0 5px 20px rgba(black, .25));
 	  @include transform-translateX(662px);
+	  @include border-radius-bottom(4px);
 	}
 }
 
@@ -286,16 +288,25 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', e
 	}
 }
 .feature-list-header{
-	border-bottom:solid 2px $c-1;
+	border-bottom:solid 2px rgba($c-1, .75);
 	.feature-plans{
 	background:$c-2;
 	color:$c-0;
 	padding:$margin 0;
 	text-align: center;
+	word-break:break-word;
 background: -moz-linear-gradient(left, $c-2 0%, lighten($c-1, 20%) 100%);
 background: -webkit-linear-gradient(left, $c-2 0%,lighten($c-1, 20%) 100%); 
 background: linear-gradient(to right, $c-2 0%,lighten($c-1, 20%) 100%);
 @include border-radius-top(4px);
+	}
+	h4{
+		color:$c-1;
+		margin:0;
+		padding:$margin-m 0;
+		i{
+		color:$c-2;
+		}
 	}
 }
 .feature-list{
@@ -303,20 +314,27 @@ background: linear-gradient(to right, $c-2 0%,lighten($c-1, 20%) 100%);
 	border-bottom:solid 1px $c-border;
 	border-bottom:solid 1px rgba($c-1, .234);
 	font-size:0.925rem;
-}
-.feature-info{
-	[class*="col-"]{
-		&:nth-child(1){
-			background:lighten($c-2, 48%);
-		}
+	div{
+		word-break:break-word;
+	}
+	& > div{
 		&:nth-child(2){
-			background:lighten($c-2, 45%);
-		}
-		&:nth-child(3){
-			background:lighten($c-2, 42%);
-		}
-		&:nth-child(4){
-			background:lighten($c-2, 39%);
+			position: relative;
+			&:before, &:after{
+				display:block;
+				content:'';
+				top:0;
+				left:25%;
+				width:25%;
+				height:100%;
+				background:lighten($c-2, 48%);
+				position: absolute;
+				z-index: -1;
+			}
+			&:after{
+				left:75%;
+				background:lighten($c-2, 45%);
+			}
 		}
 	}
 }
@@ -327,12 +345,16 @@ background: linear-gradient(to right, $c-2 0%,lighten($c-1, 20%) 100%);
 	padding:$margin*3 0;
 	position: relative;
 }
+.feature-table{
+	margin-top:$margin*3;
+}
 .ic-available, .ic-not-available{
-	display:inline-block;
+	display:block;
 	background-repeat:no-repeat;
 	background-position:center center;
 	width:22px;
 	height:22px;
+	margin:0 auto;
 	//height:50px;
 }
 .ic-available{
