--- a/landing-page/css/style.css
+++ b/landing-page/css/style.css
@@ -1289,6 +1289,13 @@ a i:before {
   vertical-align: middle;
 }
 
+i.is-fit {
+  overflow: hidden;
+}
+i.is-fit:before {
+  vertical-align: middle;
+}
+
 img {
   max-width: 100%;
 }
@@ -1806,6 +1813,18 @@ body.disabled {
   position: relative;
 }
 
+.content-v {
+  padding: 20px 0;
+  text-align: left;
+  position: relative;
+}
+
+.content-h {
+  padding: 0 20px;
+  text-align: left;
+  position: relative;
+}
+
 .content-title {
   color: #2d5fa5;
   padding: 10px 0 20px 0;
@@ -2295,14 +2314,14 @@ body.disabled {
   }
   .feature-list:before {
     min-width: 100%;
-    width: calc(100% + 40px);
+    width: calc(100% + 20px);
     height: 100%;
     content: "";
     display: block;
     position: absolute;
     background: #f5f5f5;
     background: rgba(23, 49, 85, 0.05);
-    left: -20px;
+    left: -10px;
     top: 0;
     opacity: 0;
     z-index: 0;
@@ -2314,9 +2333,10 @@ body.disabled {
     -moz-backface-visibility: hidden;
     -webkit-transform: translate3d(0, 0, 0);
     -moz-transform: translate3d(0, 0, 0);
-    -webkit-border-radius: 40px;
-    -moz-border-radius: 40px;
-    border-radius: 40px;
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    border-radius: 8px;
+    box-shadow: 0 0 0 3px rgba(23, 49, 85, 0.05);
   }
   .feature-list:hover:before {
     opacity: 1;
@@ -2336,6 +2356,12 @@ body.disabled {
     -ms-transform: translateX(662px);
     -o-transform: translateX(662px);
     transform: translateX(662px);
+    -webkit-border-bottom-right-radius: 4px;
+    -webkit-border-bottom-left-radius: 4px;
+    -moz-border-radius-bottomright: 4px;
+    -moz-border-radius-bottomleft: 4px;
+    border-bottom-right-radius: 4px;
+    border-bottom-left-radius: 4px;
   }
 }
 .list-plans {
@@ -2367,13 +2393,14 @@ body.disabled {
 }
 
 .feature-list-header {
-  border-bottom: solid 2px #173155;
+  border-bottom: solid 2px rgba(23, 49, 85, 0.75);
 }
 .feature-list-header .feature-plans {
   background: #2791D9;
   color: #ffffff;
   padding: 20px 0;
   text-align: center;
+  word-break: break-word;
   background: -moz-linear-gradient(left, #2791D9 0%, #2d5fa5 100%);
   background: -webkit-linear-gradient(left, #2791D9 0%, #2d5fa5 100%);
   background: linear-gradient(to right, #2791D9 0%, #2d5fa5 100%);
@@ -2384,6 +2411,14 @@ body.disabled {
   border-top-left-radius: 4px;
   border-top-right-radius: 4px;
 }
+.feature-list-header h4 {
+  color: #173155;
+  margin: 0;
+  padding: 10px 0;
+}
+.feature-list-header h4 i {
+  color: #2791D9;
+}
 
 .feature-list {
   position: relative;
@@ -2391,18 +2426,26 @@ body.disabled {
   border-bottom: solid 1px rgba(23, 49, 85, 0.234);
   font-size: 0.925rem;
 }
-
-.feature-info [class*=col-]:nth-child(1) {
+.feature-list div {
+  word-break: break-word;
+}
+.feature-list > div:nth-child(2) {
+  position: relative;
+}
+.feature-list > div:nth-child(2):before, .feature-list > div:nth-child(2):after {
+  display: block;
+  content: "";
+  top: 0;
+  left: 25%;
+  width: 25%;
+  height: 100%;
   background: #f7fbfe;
+  position: absolute;
+  z-index: -1;
 }
-.feature-info [class*=col-]:nth-child(2) {
+.feature-list > div:nth-child(2):after {
+  left: 75%;
   background: #eaf4fb;
-}
-.feature-info [class*=col-]:nth-child(3) {
-  background: #ddeef9;
-}
-.feature-info [class*=col-]:nth-child(4) {
-  background: #d0e7f7;
 }
 
 .section-feature-comparison {
@@ -2413,12 +2456,17 @@ body.disabled {
   position: relative;
 }
 
+.feature-table {
+  margin-top: 60px;
+}
+
 .ic-available, .ic-not-available {
-  display: inline-block;
+  display: block;
   background-repeat: no-repeat;
   background-position: center center;
   width: 22px;
   height: 22px;
+  margin: 0 auto;
 }
 
 .ic-available {
