update menu - footer -etc

--- a/landing-page/css/scss/module/content.scss
+++ b/landing-page/css/scss/module/content.scss
@@ -504,6 +504,16 @@ section{
 
 
 /*Formats*/
+.link{
+	color:$c-2;
+	text-decoration: none;
+	&:hover{
+		color:darken($c-2, 10%);
+	}
+	&:active{
+		color:darken($c-2, 20%);
+	}
+}
 .hide{
 	display: none;
 }
