--- a/landing-page/css/style.css
+++ b/landing-page/css/style.css
@@ -904,11 +904,6 @@
   -o-box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
 }
-.site-header .btn {
-  line-height: 35px;
-  height: 35px;
-  margin-top: 10px;
-}
 .site-header .btn:hover {
   color: #ffffff;
 }
@@ -1803,6 +1798,17 @@ body.disabled {
 
 /*end migrated*/
 /*Formats*/
+.link {
+  color: #2791D9;
+  text-decoration: none;
+}
+.link:hover {
+  color: #1f74ae;
+}
+.link:active {
+  color: #175783;
+}
+
 .hide {
   display: none;
 }
